# richelieu_archive

./: .env  .gitignore  Cargo.toml
migrations/2023-09-27-090654_create_counterparties/: down.sql  up.sql
migrations/2023-09-27-094133_create_hr/: down.sql  up.sql
migrations/2023-09-27-095236_create_products/: down.sql  up.sql
migrations/2023-09-27-104304_create_deals/: down.sql  up.sql
migrations/2023-09-27-105221_create_cash_flows/: down.sql  up.sql
migrations/2023-09-28-163444_create_smm/: down.sql  up.sql
migrations/2023-09-28-193430_create_product_catalog_initial_schema/: down.sql  up.sql
migrations/2023-09-29-135558_create_product_catalog/: down.sql  up.sql
migrations/2023-09-29-155424_create_category_product/: down.sql  up.sql
src/: cp_funcs.rs  cp_model.rs  cp_schema.rs  data_access.rs  errors.rs  main.rs  models.rs  repository.rs  schema.rs
src/models/: mod.rs  products.rs
